# Ed-Fi-Actions

.github/workflows/: after-pullrequest-bidi.yml  after-pullrequest-powershell.yml  codeql-analysis.yml  on-pullrequest-bidi.yml  on-pullrequest-powershell.yml  powershell-analyzer.yml  scorecard.yml
action-allowedlist/: approved.json  pyproject.toml
bidi-scanner/cli/: package-lock.json  package.json
bidi-scanner/github/: package-lock.json
